--- a/src/Balls.csproj
+++ b/src/Balls.csproj
@@ -1,14 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\deps\Structs\src\Structs.csproj" />
-    <ProjectReference Include="..\deps\Graphics\src\Graphics.csproj" />
-    <ProjectReference Include="..\deps\Windowing\src\Windowing.csproj" />
+    <ProjectReference Include="..\deps\Structs\src\Structs.csproj" AdditionalProperties="UseDouble=$(UseDouble)" />
+    <ProjectReference Include="..\deps\Graphics\src\Graphics.csproj" AdditionalProperties="UseDouble=$(UseDouble)" />
+    <ProjectReference Include="..\deps\Windowing\src\Windowing.csproj" AdditionalProperties="UseDouble=$(UseDouble)" />
   </ItemGroup>
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
+  </PropertyGroup>
+  
+  <PropertyGroup>
+    <ThreadPoolMinThreads>8</ThreadPoolMinThreads>
+    <ThreadPoolMaxThreads>20</ThreadPoolMaxThreads>
+  </PropertyGroup>
+  
+  <PropertyGroup Condition="'$(UseDouble)'=='true'">
+	<DefineConstants>$(DefineConstants);DOUBLE</DefineConstants>
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
