Added instance based rendering

--- a/src/Balls.csproj
+++ b/src/Balls.csproj
@@ -35,4 +35,10 @@
     </ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
   </PropertyGroup>
   
+  <ItemGroup>
+    <None Update="shaders.vertex.glsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  
 </Project>
